apps/media-apps/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: servarr
  name: radarr
  namespace: ${main_namespace}
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/part-of: servarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/part-of: servarr
    spec:
      securityContext:
        fsGroup: 6000
        supplementalGroups:
          - 568
      containers:
        - name: radarr
          image: ghcr.io/onedr0p/radarr:5.8.3.8933@sha256:c8fa12f8efdbcb8ef736b019335c39f4962def9bee479b0fb8b0401824bcf26b
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          resources:
            requests:
              cpu: 40m
              memory: 400Mi
            limits:
              cpu: 100m
              memory: 600Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 6000
            runAsNonRoot: true
            runAsUser: 6005
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /ping
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 4
            httpGet:
              path: /ping
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 12
            successThreshold: 2
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /ping
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 12
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /mnt/media-data
              name: media
      serviceAccountName: default
      strategy: Recreate
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: servarr
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media
          nfs:
            path: /mnt/chronos/media-data
            server: 192.168.178.14
