apps/media-apps/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: ${main_namespace}
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: servarr
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 7878
    targetPort: 7878
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/part-of: servarr
